test/negative/cycle.net
INPUT a
OUTPUT b
VAR a, b
IN
b = AND b a
